--- a/.circleci/build_config.yml
+++ b/.circleci/build_config.yml
@@ -464,6 +464,8 @@ step-fix-sync: &step-fix-sync
       fi
 
       cd src/third_party/angle
+      git repack -a
+      rm .git/objects/info/alternates
       git remote set-url origin https://chromium.googlesource.com/angle/angle.git
       git fetch
 
