--- a/.circleci/build_config.yml
+++ b/.circleci/build_config.yml
@@ -464,7 +464,7 @@ step-fix-sync: &step-fix-sync
       fi
 
       cd src/third_party/angle      
-      # rm .git/objects/info/alternates
+      rm .git/objects/info/alternates
       #git remote set-url origin https://chromium.googlesource.com/angle/angle.git
       cp .git/config .git/config.backup
       git remote remove origin
